--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
 
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- MY CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <title>
+      Matie Natov | UX Designer and Website Developer
+    </title>
+  </head>
+  <body>
+
+    <style>
+
+    body {
+      background: url(https://raw.githubusercontent.com/matie707/portfolio/master/Matie_Natov_Web_Designer.jpg) no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      min-height: 350px;
+      color:#FFF;
+      background-color:#444444;
+    }
+    </style>
+
+
+<br>
+<br>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md">
+        <h1 class="display-4">My name is Matie. I&nbsp;am&nbsp;a UX Designer and Website Developer.</h1>
+          <a class="btn btn-primary" href="work.html">
+            View My Work
+          </a>
+      </div><!-- end col -->  
+      <div class="col-md"></div><!-- end col -->  
+    </div><!-- end row-->   
+  </div><!-- end -->
+
+
+
+  </body>
+</html>
