--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -21,7 +20,7 @@
     <style>
 
     body {
-      background: url(https://raw.githubusercontent.com/matie707/portfolio/master/Matie_Natov_Web_Designer.jpg) no-repeat center center fixed; 
+      background: url(https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Natov_Web_Designer.jpg) no-repeat center center fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -41,8 +40,8 @@
     <div class="row">
       <div class="col-md">
         <h1 class="display-4">My name is Matie. I&nbsp;am&nbsp;a UX Designer and Website Developer.</h1>
-          <a class="btn btn-primary" href="work.html">
-            View My Work
+          <a class="btn btn-primary" href="work.html#list-item-1">
+            Please View My Work
           </a>
       </div><!-- end col -->  
       <div class="col-md"></div><!-- end col -->  
