--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <!-- MY CSS -->
     <link rel="stylesheet" href="styles.css">
 
+    <link rel="icon" 
+      type="image/png" 
+      href="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Tiny.png">
+      
+
     <title>
       Matie Natov | UX Designer and Website Developer
     </title>
