--- a/work.html
+++ b/work.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,6 +10,10 @@
 
     <!-- MY CSS -->
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" 
+      type="image/png" 
+      href="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Tiny.png">
 
     <title>
       Matie Natov | Professional Website Developer and User Experience Designer
