--- a/work.html
+++ b/work.html
@@ -464,7 +464,7 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-freelance-rlg-1" src="images/Landscape_Website-Designer.png"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-freelance-rlg-1" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/RLG_Responsive_Website.png"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-freelance-rlg-1" tabindex="-1" role="dialog">
         <div class="modal-dialog">
@@ -479,7 +479,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum placerat nulla, id dignissim nisl faucibus et. Sed mi enim, vehicula non lobortis non, efficitur in velit. Donec nisi sem, blandit id lobortis et, posuere ac enim. Morbi pulvinar condimentum mauris sed venenatis. Aenean vestibulum mauris ut neque pharetra, vitae consequat sem scelerisque. Aliquam auctor lectus elementum pharetra tristique. Vestibulum eleifend eleifend nulla, in eleifend mi finibus at.</p>
-              <img width="100%" src="images/Landscape_Website-Designer.png"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/RLG_Responsive_Website.png"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -494,7 +494,7 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-freelance-rlg-1" src="images/Graphic-Brochure-Design.png"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-freelance-rlg-1" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/RLG_Brochure.png"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-freelance-rlg-1" tabindex="-1" role="dialog">
         <div class="modal-dialog">
@@ -509,7 +509,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum placerat nulla, id dignissim nisl faucibus et. Sed mi enim, vehicula non lobortis non, efficitur in velit. Donec nisi sem, blandit id lobortis et, posuere ac enim. Morbi pulvinar condimentum mauris sed venenatis. Aenean vestibulum mauris ut neque pharetra, vitae consequat sem scelerisque. Aliquam auctor lectus elementum pharetra tristique. Vestibulum eleifend eleifend nulla, in eleifend mi finibus at.</p>
-              <img width="100%" src="images/Graphic-Brochure-Design.png"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/RLG_Brochure.png"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -525,7 +525,7 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-freelance-an-1" src="images/AN__2016-Wedding-Bridal-Square-Brochure.jpg"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-freelance-an-1" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/AN_Brochure_Design.jpg"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-freelance-an-1" tabindex="-1" role="dialog">
         <div class="modal-dialog">
@@ -540,7 +540,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum placerat nulla, id dignissim nisl faucibus et. Sed mi enim, vehicula non lobortis non, efficitur in velit. Donec nisi sem, blandit id lobortis et, posuere ac enim. Morbi pulvinar condimentum mauris sed venenatis. Aenean vestibulum mauris ut neque pharetra, vitae consequat sem scelerisque. Aliquam auctor lectus elementum pharetra tristique. Vestibulum eleifend eleifend nulla, in eleifend mi finibus at.</p>
-              <img width="100%" src="images/AN__2016-Wedding-Bridal-Square-Brochure.jpg"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/AN_Brochure_Design.jpg"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -556,14 +556,14 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-freelance-an-2" src="images/AN_Artistry_Screen_3.jpg"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-freelance-an-2" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/AN_Web_Form.jpg"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-freelance-an-2" tabindex="-1" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">
-                Marketing Card
+                Web Form
               </h5><!-- end modal title -->
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -571,7 +571,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum placerat nulla, id dignissim nisl faucibus et. Sed mi enim, vehicula non lobortis non, efficitur in velit. Donec nisi sem, blandit id lobortis et, posuere ac enim. Morbi pulvinar condimentum mauris sed venenatis. Aenean vestibulum mauris ut neque pharetra, vitae consequat sem scelerisque. Aliquam auctor lectus elementum pharetra tristique. Vestibulum eleifend eleifend nulla, in eleifend mi finibus at.</p>
-              <img width="100%" src="images/AN_Artistry_Screen_3.jpg"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/AN_Web_Form.jpg"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
