--- a/work.html
+++ b/work.html
@@ -613,14 +613,14 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-home" src="images/Kids_Coding_Homepage.jpg"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-home" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_1.jpg"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-mv-site-home" tabindex="-1" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">
-                MVCode Homepage
+                MVCode Marketing Website Homepage
               </h5><!-- end modal title -->
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -628,7 +628,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Design the MVCode homepage for it's public-facing marketing website. Design the graphics using stock vectors and layout. Design the color scheme and information flow. Build the front-end coding with HTML, CSS and Bootstrap.</p>
-              <img width="100%" src="images/Kids_Coding_Homepage.jpg"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_1.jpg"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -644,14 +644,14 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-mobile" src="images/MV_mobile_scroll.gif"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-mobile" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_4.gif"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-mv-site-mobile" tabindex="-1" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">
-                MVCode Careers Page
+                Mobile Website
               </h5><!-- end modal title -->
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -659,7 +659,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum placerat nulla, id dignissim nisl faucibus et. Sed mi enim, vehicula non lobortis non, efficitur in velit. Donec nisi sem, blandit id lobortis et, posuere ac enim. Morbi pulvinar condimentum mauris sed venenatis. Aenean vestibulum mauris ut neque pharetra, vitae consequat sem scelerisque. Aliquam auctor lectus elementum pharetra tristique. Vestibulum eleifend eleifend nulla, in eleifend mi finibus at.</p>
-              <img width="100%" src="images/MV_mobile_scroll.gif"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_4.gif"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -674,14 +674,14 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-member" src="images/kids_coding_website.jpg"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-member" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_3.jpg"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-mv-site-member" tabindex="-1" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">
-                MVCode Member Page
+                Marketing Member Page
               </h5><!-- end modal title -->
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -689,7 +689,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum placerat nulla, id dignissim nisl faucibus et. Sed mi enim, vehicula non lobortis non, efficitur in velit. Donec nisi sem, blandit id lobortis et, posuere ac enim. Morbi pulvinar condimentum mauris sed venenatis. Aenean vestibulum mauris ut neque pharetra, vitae consequat sem scelerisque. Aliquam auctor lectus elementum pharetra tristique. Vestibulum eleifend eleifend nulla, in eleifend mi finibus at.</p>
-              <img width="100%" src="images/kids_coding_website.jpg"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_3.jpg"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -706,7 +706,7 @@
     <!--~~~~~~~~~~~~~ Grid Item ~~~~~~~~~~~~~-->
     <div class="grid-item">
       <!--~~~~~~~~~~~~~ Image ~~~~~~~~~~~~~-->
-      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-careers" src="images/Kids_Coding_Career_Page.jpg"/>
+      <img width="100%" data-toggle="modal" data-target="#modal-mv-site-careers" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_2.jpg"/>
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal-mv-site-careers" tabindex="-1" role="dialog">
         <div class="modal-dialog">
@@ -721,7 +721,7 @@
             </div><!-- end modal-header -->
             <div class="modal-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum placerat nulla, id dignissim nisl faucibus et. Sed mi enim, vehicula non lobortis non, efficitur in velit. Donec nisi sem, blandit id lobortis et, posuere ac enim. Morbi pulvinar condimentum mauris sed venenatis. Aenean vestibulum mauris ut neque pharetra, vitae consequat sem scelerisque. Aliquam auctor lectus elementum pharetra tristique. Vestibulum eleifend eleifend nulla, in eleifend mi finibus at.</p>
-              <img width="100%" src="images/Kids_Coding_Career_Page.jpg"/>
+              <img width="100%" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_2.jpg"/>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
