--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- MY CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://matienatov.github.io/styles.css">
 
     <link rel="icon" 
       type="image/png" 
@@ -100,6 +100,10 @@
 
 <div class="col-9">
 <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
+
+
+
+<img id="loading" width="100px" src="https://i.giphy.com/media/sSgvbe1m3n93G/giphy.webp">
 
 
 
@@ -770,7 +774,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 <!--~~~~~~~~~~~~~ Gallery ~~~~~~~~~~~~~-->
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script onload="javascript:document.getElementById('loading').style.display='none'" s src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
 <script>
 
