--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <style>
 
     body {
-      background: url(https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Natov_Web_Designer.jpg) no-repeat center center fixed; 
+      background: url(https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Natov_Web_Designer.jpg) no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -46,7 +46,7 @@
       <div class="col-md">
         <h1 class="display-4">My name is Matie. I&nbsp;am&nbsp;a UX Designer and Website Developer.</h1>
           <a class="btn btn-primary" href="work.html#list-item-1">
-            Please View My Work
+            View My Work
           </a>
       </div><!-- end col -->  
       <div class="col-md"></div><!-- end col -->  
