--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
 	  
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://matienatov.github.io/styles.css">
 
     <!-- Favicon -->
     <link rel="icon" 
