--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
       href="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Tiny.png">
 
     <title>
-      Matie Natov | Professional Website Developer and User Experience Designer
+      View My Work | Matie Natov | Professional Website Developer and User Experience Designer
     </title>
 
     <meta name="description" content="My name is Matie. I am a UX Designer and Website Developer.">
