--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
 
     <title>
-      Matie Natov | UX Designer and Website Developer
+      Home | Matie Natov | UX Designer and Website Developer
     </title>
   </head>
   <body>
@@ -40,6 +40,9 @@
 <br>
 <br>
 
+	  
+	  
+	  
 
   <div class="container">
     <div class="row">
