--- a/about.html
+++ b/about.html
@@ -41,28 +41,24 @@
 
 
 <!--~~~~~~~~~~~~~ Nav Bar ~~~~~~~~~~~~~-->
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">
-    <img src="images/Matie_Tiny.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-    Matie Natov
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container">
+		<a class="navbar-brand" href="#">
+			<img alt="Tiny picture of Matie Natov" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Tiny.png" width="30" height="30" class="d-inline-block align-top"/>
+			Matie Natov
+		</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		<div class="navbar-nav">
+		  <a class="nav-item nav-link" href="index.html">Home</a>
+		  <a class="nav-item nav-link" href="work.html">My Work</a>
+		  <a class="nav-item nav-link active" href="about.html">About <span class="sr-only">(current)</span></a>
+		</div>
+	  </div>
+	</div><!-- end -->
+</nav><!-- nav -->
 
 
 
