--- a/work.html
+++ b/work.html
@@ -25,11 +25,11 @@
       href="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Tiny.png">
 
     <title>
-      View My Work | Matie Natov | Professional Website Developer and User Experience Designer
+      My Work | Matie Natov | Professional Website Developer and User Experience Designer
     </title>
 
     <meta name="description" content="My name is Matie. I am a UX Designer and Website Developer.">
-    <meta name="keywords" content="Matie, Natov, Web, Design, UX">
+    <meta name="keywords" content="My Work, Portfolio, Matie, Natov, Web, Design, UX">
     <meta name="author" content="Matie Natov">
 
 
@@ -41,28 +41,24 @@
 
 
 <!--~~~~~~~~~~~~~ Nav Bar ~~~~~~~~~~~~~-->
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">
-    <img src="images/Matie_Tiny.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-    Matie Natov
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container">
+		<a class="navbar-brand" href="#">
+			<img alt="Tiny picture of Matie Natov" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Tiny.png" width="30" height="30" class="d-inline-block align-top"/>
+			Matie Natov
+		</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		<div class="navbar-nav">
+		  <a class="nav-item nav-link" href="index.html">Home</a>
+		  <a class="nav-item nav-link active" href="work.html">My Work <span class="sr-only">(current)</span></a>
+		  <a class="nav-item nav-link" href="about.html">About</a>
+		</div>
+	  </div>
+	</div><!-- end -->
+</nav><!-- nav -->
 
 
 
@@ -70,7 +66,7 @@
 <!--~~~~~~~~~~~~~ Jumbotron ~~~~~~~~~~~~~-->
 <div class="jumbotron my-work jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">View My Work</h1>
+    <h1 class="display-4">My Work</h1>
   </div>
 </div>
 
