--- a/work.html
+++ b/work.html
@@ -83,7 +83,7 @@
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
-<div class="col-3">
+<div class="col-md-3 col-sm-12">
 
 
 <!--~~~~~~~~~~~~~ Sid Navigation ~~~~~~~~~~~~~-->
@@ -93,7 +93,6 @@
   <div class="row">
     <div class="col-md">
 		
-		<h6>View By Category:</h6>
         <span id="Filter_1" class="filter-gallery-active">
 			Web Pages
 		</span>
@@ -108,6 +107,9 @@
 		</span>
       </div><!-- end col -->
   </div><!-- end row -->
+	
+<br>
+
 </div><!-- end container -->
 </div><!-- end Side Bar / col-3 -->
 
@@ -118,18 +120,13 @@
 
 
 <!--~~~~~~~~~~~~~ Main Content ~~~~~~~~~~~~~-->
-<div class="col-9">
+<div class="col-md-9 col-sm-12">
 
 
 	
 <!--~~~~~~~~~~~~~ Tab 1 ~~~~~~~~~~~~~-->
 <div id="inpager_1" class="container">
 
-  <div class="row">
-	  	<h6>Click on Images:</h6>
-	</div><!-- end row -->  
-	  
-	  
 <div class="row">
     <div class="col-md">
 
