--- a/about.html
+++ b/about.html
@@ -83,12 +83,12 @@
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
-<div class="col-3">
+<div class="col-md-3 col-sm-12">
 
 
-<!--~~~~~~~~~~~~~ Sid Navigation ~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~ Sid Navigation ~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~ Sid Navigation ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Side Navigation ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Side Navigation ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Side Navigation ~~~~~~~~~~~~~-->
 <div class="container">
   <div class="row">
     <div class="col-md">
@@ -113,10 +113,8 @@
 
 
 
-
-
 <!--~~~~~~~~~~~~~ Main Content ~~~~~~~~~~~~~-->
-<div class="col-9">
+<div class="col-md-9 col-sm-12">
 
 
 	
