--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
-<div class="col-md-3 col-sm-12">
+<div class="col-md-2 col-sm-12">
 
 
 <!--~~~~~~~~~~~~~ Side Navigation ~~~~~~~~~~~~~-->
@@ -92,18 +92,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md">
-        <span id="Filter_1" class="filter-gallery-active">
-			About Me
-		</span>
-        <span id="Filter_2" class="filter-gallery">
-			View My Resume
-		</span>
-        <span id="Filter_3" class="filter-gallery">
-			Contact Me
-		</span>
-        <span id="Filter_4" class="filter-gallery">
-			Follow Me
-		</span>
+		
       </div><!-- end col -->
   </div><!-- end row -->
 </div><!-- end container -->
@@ -114,7 +103,7 @@
 
 
 <!--~~~~~~~~~~~~~ Main Content ~~~~~~~~~~~~~-->
-<div class="col-md-9 col-sm-12">
+<div class="col-md-8 col-sm-12">
 
 
 	
@@ -235,6 +224,29 @@
 	
 	
 </div><!-- end Main Content / col-9 -->
+	
+	
+<!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Side Bar ~~~~~~~~~~~~~-->
+<div class="col-md-2 col-sm-12">
+
+
+<!--~~~~~~~~~~~~~ Side Navigation ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Side Navigation ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Side Navigation ~~~~~~~~~~~~~-->
+<div class="container">
+  <div class="row">
+    <div class="col-md">
+		
+      </div><!-- end col -->
+  </div><!-- end row -->
+</div><!-- end container -->
+</div><!-- end Side Bar / col-3 -->
+	
+	
+	
+	
 </div><!-- end row -->
 </div><!-- end container -->
 
