--- a/about.html
+++ b/about.html
@@ -118,9 +118,12 @@
 	
 	<br>
 	<br>
-		
+	
+	<h2>
+		Hello!
+	</h2>
 	<p>
-		Hi! My name is Matie Natov. I love making beautiful and easy-to-use websites. I have eight years of experience making and creating websites, web pages, landing pages and graphic designs. I graduated from California State University Monterey Bay in 2014 with a B.S. Degree in Communication Design, Concentration in Web Design, and Business Minor. 	
+		My name is Matie Natov. I love making beautiful and easy-to-use websites. I have eight years of experience making and creating websites, web pages, landing pages and graphic designs. I graduated from California State University Monterey Bay in 2014 with a B.S. Degree in Communication Design, Concentration in Web Design, and Business Minor. 	
 	</p>
 		
 	<p>
@@ -135,17 +138,7 @@
 	<p>
 		I love working in a Content Management System as much as I love hand-coding a website. (like this one!) Also, I love working independently as much as I love working with a team. I'm just passionate about web design, simplicity, and making complex things feel simple.
 	</p>
-		
-	<p>
-		I'd love to hear from you! Please contact me or view my resume to learn more.
-	</p>
-		
-	<p>
-		Best,
-		<br>
-		- Matie :-)
-	</p>
-		
+
 		
     </div><!-- end col-md -->
 
