--- a/about.html
+++ b/about.html
@@ -10,14 +10,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	  
-	  
-	  
-	<!-- Icons-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic.min.css">
-	  
-
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"> 
+	
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="https://matienatov.github.io/styles.css">
+    <link rel="stylesheet" href="http://matienatov.github.io/styles.css">
 
     <!-- Favicon -->
     <link rel="icon" 
@@ -41,10 +38,9 @@
 
 
 <!--~~~~~~~~~~~~~ Nav Bar ~~~~~~~~~~~~~-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="container">
 		<a class="navbar-brand" href="#">
-			<img alt="Tiny picture of Matie Natov" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Tiny.png" width="30" height="30" class="d-inline-block align-top"/>
 			Matie Natov
 		</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,14 +59,14 @@
 
 
 
-<!--~~~~~~~~~~~~~ Jumbotron ~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~ Jumbotron 
 <div class="jumbotron my-work jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">About Me</h1>
   </div>
 </div>
 
-
+~~~~~~~~~~~~~-->
 
 
 
@@ -123,20 +119,20 @@
 		Hello!
 	</h2>
 	<p>
-		My name is Matie Natov. I love making beautiful and easy-to-use websites. I have eight years of experience making and creating websites, web pages, landing pages and graphic designs. I graduated from California State University Monterey Bay in 2014 with a B.S. Degree in Communication Design, Concentration in Web Design, and Business Minor. 	
+		My name is Matie Natov. I love digital design. I have eight years of experience making and creating websites, web pages, landing pages, and graphic designs. I graduated from California State University Monterey Bay in 2014 with a BS Degree in Communication Design, Concentration in Web Design, and Business Minor. 	
 	</p>
 		
 	<p>
-		I love working with people to collaborate with different skills, backgrounds, talents and cultures. I believe teamwork can help transform lives! 
+		I love working with people to collaborate and learn different skills, backgrounds, talents, and cultures. I believe teamwork can help transform lives! 
 		
 	</p>
 		
 	<p>
-		I've worked with marketing firms, start-ups, small business owners, and large corporations to design, develop, and publish amazing website experiences, both public-facing and internal-facing.
+		I've worked with marketing firms, startups, and large corporations to design, develop, and publish amazing website experiences and graphic designs, both public-facing and internal-facing.
 	</p>
 		
 	<p>
-		I love working in a Content Management System as much as I love hand-coding a website. (like this one!) Also, I love working independently as much as I love working with a team. I'm just passionate about web design, simplicity, and making complex things feel simple.
+		I love working within a Content Management System as much as I love hand-coding a website. (like this one!) Also, I love working independently as much as I love working with a team. I'm passionate about web design, graphic design, simplicity, and making complex things feel simple.
 	</p>
 
 		
