--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+	
+	  
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"> 
+	  
+	  
     <!-- MY CSS -->
-    <link rel="stylesheet" href="https://matienatov.github.io/styles.css">
+    <link rel="stylesheet" href="http://matienatov.github.io/styles.css">
 
     <link rel="icon" 
       type="image/png" 
@@ -33,6 +38,8 @@
       min-height: 350px;
       color:#FFF;
       background-color:#444444;
+	font-family: 'Montserrat', sans-serif;
+		font-weight: 700;
     }
     </style>
 
