--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@
 <!--~~~~~~~~~~~~~ Nav Bar ~~~~~~~~~~~~~-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="container">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="index.html">
 			Matie Natov
 		</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
