--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	  
 	  
     <!-- MY CSS -->
-    <link rel="stylesheet" href="http://matienatov.github.io/styles.css">
+    <link rel="stylesheet" href="https://matienatov.github.io/styles.css">
 
     <link rel="icon" 
       type="image/png" 
