--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
 	  
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="http://matienatov.github.io/styles.css">
+    <link rel="stylesheet" href="https://matienatov.github.io/styles.css">
 
     <!-- Favicon -->
     <link rel="icon" 
@@ -135,6 +135,7 @@
 	  <!--~~~~~~~~~~~~~ MV MARKETING WEBSITE ~~~~~~~~~~~~~-->
       <!--~~~~~~~~~~~~~ MV MARKETING WEBSITE ~~~~~~~~~~~~~-->
       <img alt="Image of Marketing Website" class="img-gallery" data-toggle="modal" data-target="#modal6" src="https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/MV_Marketing_Website_1.jpg"/>
+		
       <!--~~~~~~~~~~~~~ Modal ~~~~~~~~~~~~~-->
       <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl">
