--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet"> 
 	
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="http://matienatov.github.io/styles.css">
+    <link rel="stylesheet" href="https://matienatov.github.io/styles.css">
 
     <!-- Favicon -->
     <link rel="icon" 
